# matrix-client

./: Cargo.toml  README.md  build.rs  flake.nix
src/: client.rs  homeserver_selector.rs  main.rs  main_window.rs  password_login.rs  warning_dialog.rs
ui/: app-window.slint  login-window.slint  main_window.slint  password-login-window.slint  startup_window.slint  warning-dialog.slint
